--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "@aws-cdk/core": "1.79.0",
+    "@aws-solutions-constructs/aws-kinesisstreams-lambda": "^1.77.0",
+    "@aws-solutions-constructs/aws-lambda-dynamodb": "^1.77.0",
     "source-map-support": "^0.5.16"
   }
 }
